# react-file2qr

./: .gitignore  README.md  package-lock.json  package.json  qrencode-server.min.py  qrencode-server.py  vercel.json
bash-server/: qrencode-server.py
parser/: assembler.py  protocol.py  qr.py  receiver.py
public/: index.html  manifest.json
python-client/: requirements.txt  setup.cfg
python-client/src/: assembler.py  main.py  protocol.py  qr.py
python-client/src/qr_to_file/: __init__.py  assembler.py  main.py  protocol.py  qr.py
python-sender-and-receiver/: requirements.in  requirements.txt  setup.cfg
python-sender-and-receiver/src/file_to_qr/: main.py
python-sender-and-receiver/src/qr_to_file/: assembler.py  main.py  qr.py  webcam.py
react-sender/: README.md  package-lock.json  package.json  react-template.yaml
react-sender/public/: i18n.js  index.css  resize-title.js
react-sender/src/: App.css  react-files.d.ts
react-sender/src/app/: FileChooser.tsx  QRCodeImage.tsx  SlideShowButton.tsx
react-sender/src/app/encoders/: QrHeaders.tsx
react-server/src/: index.css
src/: index.tsx
src/app/: App.tsx  ChangeIndexButton.tsx  Dropdown.tsx  ErrorCorrectionLevelSetting.tsx  ErrorMessage.tsx  FileChooser.tsx  QRCodeImage.tsx
src/app/encoders/: QrHeaders.tsx
src/app/redux/: actions.ts  constants.ts  reducer.ts  store.ts
