[metadata]
name = file2qr
version = 0.0.3
author = six-two
author_email = pip@six-two.dev
description = Tools for sending and receiving a file via QR codes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/react-file2qr
license = MIT License
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    Pillow
    pyzbar
    python-opencv

[options.packages.find]
where = src

# SEE https://packaging.python.org/en/latest/specifications/entry-points/ and https://stackoverflow.com/questions/48884796/how-to-set-up-entry-points-in-setup-cfg
[options.entry_points]
console_scripts =
    qr2file = qr_to_file.main:main
    file2qr = file_to_qr.main:main
